# session-manager-wrapper

./: .editorconfig  .envrc  .gitignore  .prettierrc.json  .rustfmt.toml  Cargo.toml  LICENSE  README.md  cspell.json  env.example.toml
.github/workflows/: cargo_ci.yaml
src/: aws_sdk.rs  lib.rs  main.rs
src/aws_sdk/: start_session.rs
src/util/: clap.rs
