[package]
name = "session-manager-wrapper"
version = "0.1.0"
edition = "2021"
description = "A Rust wrapper for AWS SSM Session Manager"
authors = ["kv5h"]
repository = "https://github.com/kv5h/session-manager-wrapper"
license = "MIT"

[dependencies]
aws-config = "1.5.0"
aws-sdk-ssm = "1.30.0"
aws-types = "1.3.0"
clap = { version = "4.5.0", features = ["cargo"] }
env_logger = "0.11"
log = "0.4"
portpicker = "0.1.1"
serde_json = "1.0"
subprocess = "1.0.0"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
